format + linting
